[workspace]
members = ["av1an-core", "av1an"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.99"
num-traits = "0.2.19"
once_cell = "1.8.0"
path_abs = "0.5.1"
tempfile = "3.26.0"
tracing = "0.1"

[profile.dev.package."*"]
opt-level = 2

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1

[profile.ci]
inherits = "release"
lto = "off"
codegen-units = 1024
debug-assertions = true
overflow-checks = true
